pre-2.x.x
    New Features
      - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
      - add ability to change keyboard focus using keyboard shortcuts or menus
          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
      - preserve Media Overlay Active Classes when deleting unused classes

    Bug Fixes
      - patch Qt6.5.3 to avoid transient child window resize bug on Windows
      - fix QuickParser bug when parseing attribute names not properly ignoreing all legal whitespace
      - make OPF parsing robust to alternative whitespace usage as well
      - fix creation of thumbnails of svg images in SelectFiles and Image Report for macOS


Sigil-2.0.2
    Bug Fixes
      - fix incorrect clip tool button insertion point due to null activeWindow value
      - fix Windows multiple screen issues when not properly identified (Qt6.5.2 patch fix)
      - fix Mac Accessibility related crashes when using non-native QFileDialog (Qt 6.5.2 patch fix)
      - workaround MacOS QMessageBox loss of focus Qt 6.5.X bug without hurting other platforms
      - fix pretty print mend not formatting mathml
      - fix Accessibility related crashes in QFontComboBox (Qt 6.5.2 patch fix)
      - prevent crashing if user mistakenly tries to delete entire ncx in CodeView
      - harden delete unused styles to trailing whitespace in class names
      - fix unrecognized media-types application/xml and text/xml
      - fix cursor just before end tag bug in align justiry, centre, right
      - fix crash when all metadata removed by user in MetaEditor
      - fix macOS min in Info.plist to be the actual 11.0
      - update build docs to Qt 6.5.3


Sigil-2.0.1
    Bug Fixes
      - fix crash when right click on Misc folder in BookBrowser
      - Allow user to revert CodeView drag_and_drop change via environment variable: SIGIL_ALLOW_CODEVIEW_DROP=1
        Note: Using DragnDrop in CodeView is still NOT officially supported.