@@ -4,6 +4,8 @@ pre-2.x.x
       - add ability to change keyboard focus using keyboard shortcuts or menus
           to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
       - preserve Media Overlay Active Classes when deleting unused classes
+      - Goto Link Or Style (or Ctrl-Clicking on a class will now search selectors
+          with combinators if notthing found in normal css classes
 
     Bug Fixes
       - patch Qt6.5.3 to avoid transient child window resize bug on Windows
